# core

./: README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5ef2b369bd9e_add_conversations_and_messages.py  8ae5c74402aa_add_agent_tasks_and_agent_task_updates_.py  92dce9b4310d_initial_tables.py  a1b2c3d4e5f6_add_openai_api_key_to_users.py  e95e65dfc2c6_rename_event_type_to_event_config_jsonb.py
backend/app/: config.py  database.py  helper.py  main.py
backend/app/agent/: executor.py  permissions.py  registry.py
backend/app/models/: __init__.py  agent_config.py  agent_task.py  conversation.py  user.py
backend/app/routers/: _state.py  agent.py  agent_tasks.py  auth.py  chats.py  conversations.py  ws.py
backend/app/schemas/: agent.py  agent_task.py  auth.py  chat.py  conversation.py
backend/app/services/: agent.py  auth.py  rabbitmq.py  telegram.py  ws_manager.py  ws_relay.py
backend/app/telegram/: converters.py  event_handler.py  session_store.py
common/: pyproject.toml
common/agent/: __init__.py  agent.py  events.py  executor.py  registry.py
common/agent/tools/: __init__.py  create_group.py  delete_message.py  edit_message.py  forward_message.py  get_chat_info.py  get_user_info.py  list_chats.py  list_contacts.py  list_folders.py  mark_as_read.py  pin_message.py  read_messages.py  search.py  send_message.py
helper/: .env.example  Dockerfile  pyproject.toml
helper/helper/: __main__.py  database.py  main.py
helper/helper/agent/: executor.py  registry.py
helper/helper/services/: agent.py  rabbitmq.py
helper/helper/telegram/: converters.py
helper/worker/: __main__.py  config.py  database.py  main.py
helper/worker/services/: agent.py  (+1 more)
schema/: pyproject.toml
schema/alembic/: env.py
schema/sovereign_schema/: __init__.py  crypto.py  database.py
(+74 files in other folders)
