[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereign-agent"
version = "0.1.0"
description = "Sovereign AI agent core — LLM agentic loop with tool execution"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "telethon>=1.42.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]
