[project]
name = "sovereign-helper"
version = "0.1.0"
description = "Sovereign helper — background agent task worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.0",
    "asyncpg>=0.31.0",
    "croniter>=6.2.2",
    "openai>=2.29.0",
    "pydantic-settings>=2.13.1",
    "sovereign-agent",
    "sovereign-schema",
    "sqlalchemy[asyncio]>=2.0.48",
    "telethon>=1.42.0",
]

[tool.uv.sources]
sovereign-agent = { path = "../common" }
sovereign-schema = { path = "../schema" }
